# Handmade-Hero

./: CMakeLists.txt  README.md
code/: build.bat  handmade.cpp  handmade.h  win32_handmade.cpp  win32_handmade.h
include/game/: common.h  handmade.h
include/platform/: win32_handmade.h
misc/: shell.bat
src/: handmade.cpp  win32_handmade.cpp
